--- a/css/bookmark-modal.css
+++ b/css/bookmark-modal.css
@@ -34,7 +34,7 @@ body{
     left: 0px;
 }
 
-#update ,#selectedID{
+#updateBookmark ,#selectedID{
     display: none;
 }
 .btn{
@@ -61,14 +61,14 @@ body{
     transition: .4s;
     background: green;
 }
-#modalContainer{
+#bookmarkModal{
     height: 100vh;
     width: 100%;
     display: none;
     position: fixed;
     top: 0;
 }
-.modalContainer{
+.bookmarkModal{
     height: 100vh;
     width: 100%;
     display: flex;
@@ -130,7 +130,7 @@ body{
     outline: none;
     font-size: 20px;
 }
-#save, #update{
+#saveBookmark, #updateBookmark{
     background-color: rgb(0, 128, 0, .8);
     margin: 0;
     margin-top: 20px;
@@ -188,7 +188,7 @@ body{
     background-color: rgb(162, 66, 66);
     color: rgb(255, 255, 255);;
 }
-.btn-bookmark-update{
+.btn-bookmark-edit{
     display: inline;
     background-color: rgb(44, 87, 172);
     color: rgb(255, 255, 255);;
